WIP: Add new environment stub

--- a/README
+++ b/README
@@ -1,4 +1,11 @@
-This is your new Play application
-=====================================
+Shibboleth SP Bootstrap App
+===========================
 
-This file will be packaged with your application, when using `play dist`.
+This is a little app to facilitate bootstrapping a Shibboleth client 
+directly into Chef. It will
+
+* Create the data bag and fill with relavant details
+* Assign shibboleth-sp role
+
+Currently the shibboleth-sp cookbook is unreleased but working to make cleaner
+and not put everything in a data bag, rather, use LWRPs
